Revert "Merge branch 'master' of https://github.com/ibissource/iaf into mermaid"
This reverts commit ba5272a01ed6474e699eb103270d99b323631bdf, reversing
changes made to c986fd255672ae43aadfddfbaccbef1a736111e7.